--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "version": "2.0.0",
     "require": {
         "php": "^8.1",
-        "typo3/cms-core": "^10.4 || ^11.5",
-        "typo3/cms-extbase": "^10.4 || ^11.5",
+        "typo3/cms-core": "^11.5",
+        "typo3/cms-extbase": "^11.5",
         "microsoft/microsoft-graph": "^2",
         "microsoft/kiota-authentication-phpleague": "^1"
     },
